infra/k8s/base/object_storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: common
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: console 
  selector:
    app: minio    

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingress
  namespace: common
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`storage.crafthomelab.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: minio-service
          port: 9000
    - match: Host(`minio-console.crafthomelab.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: minio-service
          port: 9001          
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: common
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args:
            - server
            - --console-address
            - ":9001"
            - /data
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-storage
              mountPath: /data
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
